# rau

./: .gitignore  Dockerfile-dev  LICENSE  README.rst  pyproject.toml
.github/workflows/: docs-publish.yml  python-publish.yml  python-test-publish.yml  run-tests.yml
docs/: _redirect.html  bibliography.bib  composable-neural-networks.rst  conf.py  details.rst  development.rst  getting-started.rst  index.rst  miscellaneous-tools.rst  rau.generation.rst  rau.models.rst  rau.tasks.rst  rau.tools.torch.rst  rau.unidirectional.rst  rau.vocab.rst
docs/_templates/: page.html  versioning.html
scripts/: build_docker_dev_image.bash  build_docs.bash  build_docs_dev.bash  build_docs_redirect.bash  build_singularity_image.bash  docker-exec.bash  docker_exec.bash  docker_shell.bash  dockerdev.bash  get-docker-image.bash  get_docker_dev_image.bash  get_latest_version.py  install_python_packages.bash  poetry_run.bash  poetry_shell.bash  run_tests.bash  variables.bash
src/rau/: cli.py
src/rau/generation/: __init__.py  beam_search.py  greedy.py  sample.py
src/rau/models/: __init__.py
src/rau/models/common/: add_tag.py  shared_embeddings.py
src/rau/models/rnn/: __init__.py  builtin.py  language_model.py  lstm.py  simple_rnn.py
src/rau/models/stack_nn/differentiable_stacks/: nondeterministic.py  stratification.py  superposition.py  vector_nondeterministic.py
src/rau/models/stack_nn/rnn/: language_model.py  nondeterministic.py  parse.py  stack_rnn.py  stratification.py  superposition.py  (+1 more)
src/rau/models/transformer/: common.py  decoder.py  encoder.py  encoder_decoder.py  input_layer.py  positional_encodings.py  unidirectional_encoder.py
src/rau/tasks/common/: __init__.py  accumulator.py  command.py  data.py  data_preparation.py  einsum.py  is_finished.py  model.py  training_loop.py
src/rau/tasks/language_modeling/: batching.py  data.py  evaluate.py  generate.py  model.py  model_size.py  prepare_data.py  train.py  training_loop.py  vocabulary.py
src/rau/tasks/sequence_to_sequence/: batching.py  data.py  model.py  prepare_data.py  train.py  training_loop.py  translate.py  vocabulary.py
src/rau/tools/torch/: __init__.py  compose.py  embedding_layer.py  init.py  layer.py  model_interface.py  profile.py  saver.py  tied_linear.py
src/rau/training/: early_stopping.py  linear_with_warmup_lr_scheduler.py  per_update_lr_scheduler.py
src/rau/unidirectional/: __init__.py  composed.py  dropout.py  embedding.py  output.py  positional.py  residual.py  simple.py  stateless.py  unidirectional.py  util.py
src/rau/vocab/: __init__.py  base.py
tests/: test_batching.py  test_beam_search.py  test_compose.py  test_early_stopping.py  test_greedy_decoding.py  test_layer.py  test_linear_with_warmup.py  test_lm_conditional_cross_entropy.py  test_model_size.py  test_padded_batch.py  test_padding.py  test_random_sampling.py  test_saver.py  test_sinusoidal_positional_encodings.py  test_training_loop.py  test_transformer_decoder.py  test_transformer_input_preparation.py  test_tutorial.bash  test_unidirectional_rnn.py  test_unidirectional_transformer_encoder.py  test_vocab.py
tests/old_training_loop/: lm_training_loop.py  training_loop.py
tests/stack_nn/: test_cross_attention.py  test_custom_transformer.py  test_rns_rnn.py  test_stack_attention.py  test_stratification.py  test_superposition.py  test_vector_rns_rnn.py
tests/unidirectional/: test_composed_unidirectional.py  test_dropout_unidirectional.py  test_embedding_unidirectional.py  test_output_unidirectional.py  test_positional_unidirectional.py  test_residual_unidirectional.py  test_simple_unidirectional.py  test_stateless_unidirectional.py
(+11 files in other folders)
